--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
 			$(document).ready(function(){
 				$('img').mousedown(function(){
 					var $this = $(this);
-					var imgOrig = $this.offset.left();
+					var imgOrig = $this.offsetLeft();
 					console.log(imgOrig);
 				});
 				
