I hope we're finally done

--- a/static/index.html
+++ b/static/index.html
@@ -60,7 +60,7 @@
 		<!-- App launch view -->
 		<div class="modal">
 			<div class="modalTitle">
-				Choose a few categories to start:
+				Choose a few categories to start off:
 			</div>
 			<div class="modalCats">
 				<div class="row">
